--- a/projects/web/app/views/tags/crud/relationField.html
+++ b/projects/web/app/views/tags/crud/relationField.html
@@ -8,7 +8,7 @@
                     &{field.name}
                 </label>
                 <a class="check-all" id="check_all">
-                    &{'check.all'}
+                    &{'crud.field.check.all'}
                 </a>
             </div>
             <div class="custom-muilt-check-box">
