--- a/projects/web/app/views/CRUD/blank.html
+++ b/projects/web/app/views/CRUD/blank.html
@@ -2,8 +2,7 @@
 #{extends 'CRUD/layout.html' /}
 #{set title:messages.get('crud.blank.title', type.modelName) /}
 
-
-<div class="row">
+<div class="row crud-title">
     <div class="col-xs-12 col-sm-12 col-md-12">  
         <h1> &{'crud.blank.title', type.modelName} </h1>
         <pre> &{'crud.blank.title.desc', type.modelName} </pre>
