--- a/projects/web/app/views/CRUD/list.html
+++ b/projects/web/app/views/CRUD/list.html
@@ -2,8 +2,7 @@
 #{extends 'CRUD/layout.html' /}
 #{set title:messages.get('crud.list.title', type.name) /}
 
-
-<div class=row>
+<div class="row crud-title">
     <div class="col-xs-12 col-sm-12 col-md-12">  
         <h1> &{'crud.list.title', type.name} </h1>
         <pre> &{'crud.list.title.desc', type.name+'.desc'} </pre>
