--- a/projects/web/app/views/CRUD/show.html
+++ b/projects/web/app/views/CRUD/show.html
@@ -10,8 +10,8 @@
             </div>
             
             <div class="row">
-                <pre class="col-xs-12 col-sm-12 col-md-8"> &{'crud.show.title.desc', type.modelName} </pre>            
-                <input data-toggle="modal" data-target="#deleteModal" class="col-xs-12 col-sm-12 col-md-3 btn btn-secondary pull-right" type="button" value="&{'crud.delete', type.modelName}" />
+                <pre class="col-xs-12 col-sm-12 col-md-9"> &{'crud.show.title.desc', type.modelName} </pre>            
+                <input data-toggle="modal" data-target="#deleteModal" class="col-xs-12 col-sm-12 col-md-2 btn btn-danger pull-right" type="button" value="&{'crud.delete', type.modelName}" />
             </div>
         </div>
     </div>
