Error if no annotations for filefield

--- a/projects/web/app/views/tags/crud/fileField.html
+++ b/projects/web/app/views/tags/crud/fileField.html
@@ -30,7 +30,7 @@
         #{get 'tempInnerScript' /}
     #{/set}   
 
-    #{if !_fileName.isEmpty()}
+    #{if _fileName != null && !_fileName.isEmpty()}
         #{set 'fileName'}&{'crud.field.file.name', _fileName, _value.length().formatSize()}#{/set}    
     #{/if}
     #{else}
