--- a/projects/web/public/stylesheets/custom.css
+++ b/projects/web/public/stylesheets/custom.css
@@ -158,3 +158,9 @@ pre {
     padding-left: 0px !important;
     padding-right: 0px !important;
 }
+
+select[readonly] {
+  background: #eee;
+  pointer-events: none;
+  touch-action: none;
+}
